# net-cpp

./: CMakeLists.txt
include/: CNetUDPClient.h  CNetUDPServer.h
src/: CNetUDPClient.cpp  CNetUDPServer.cpp
tests/: main.cpp
